CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__bff_go.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Dockerfile
- README.md
- api/graphql/gqlgen.yml
- api/graphql/schema.graphql
- cmd/main.go
- config/config.dev.yaml
- config/config.prod.yaml
- config/config.staging.yaml
- config/config.yaml
- go.mod
- internal/client/upstream.go
- internal/handler/graphql_resolver.go
- internal/handler/graphql_resolver_test.go
