CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__bff_rust.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Cargo.toml
- Dockerfile
- README.md
- config/config.dev.yaml
- config/config.prod.yaml
- config/config.staging.yaml
- config/config.yaml
- src/client/mod.rs
- src/client/upstream.rs
- src/handler/graphql.rs
- src/handler/mod.rs
- src/main.rs
- tests/integration_test.rs
