CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__client_flutter.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Dockerfile
- README.md
- analysis_options.yaml
- assets/navigation.yaml
- config-schema.yaml
- lib/app/router.dart
- lib/config/__generated__/config_types.dart
- lib/main.dart
- lib/navigation/__generated__/route_ids.dart
- lib/providers/service_provider.dart
- lib/utils/dio_client.dart
- nginx.conf
- pubspec.yaml
- test/widget_test.dart
