CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__devcontainer_rust.snap
---
source: tests/snapshot_tests.rs
expression: sorted
---
- devcontainer.json
- docker-compose.extend.yaml
- post-create.sh
