CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__docker_compose_full.snap
---
source: tests/snapshot_tests.rs
expression: sorted
---
- docker-compose.override.yaml.example
- docker-compose.yaml
