CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__go_graphql_minimal.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Dockerfile
- README.md
- api/graphql/schema.graphql
- cmd/main.go
- config/config.dev.yaml
- config/config.prod.yaml
- config/config.staging.yaml
- config/config.yaml
- go.mod
- gqlgen.yml
- internal/adapter/handler/graphql_resolver.go
- internal/adapter/handler/handler_test.go
- internal/domain/model/entity.go
- internal/domain/repository/repository.go
- internal/infra/config/config.go
- internal/usecase/usecase.go
- internal/usecase/usecase_test.go
