CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__go_rest_grpc_postgresql.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Dockerfile
- README.md
- api/openapi/openapi.yaml
- api/proto/service.proto
- buf.gen.yaml
- buf.yaml
- cmd/main.go
- config/config.dev.yaml
- config/config.prod.yaml
- config/config.staging.yaml
- config/config.yaml
- go.mod
- internal/adapter/handler/grpc_handler.go
- internal/adapter/handler/handler_test.go
- internal/adapter/handler/rest_handler.go
- internal/domain/model/entity.go
- internal/domain/repository/repository.go
- internal/infra/config/config.go
- internal/infra/persistence/db.go
- internal/infra/persistence/repository.go
- internal/infra/persistence/repository_test.go
- internal/usecase/usecase.go
- internal/usecase/usecase_test.go
- oapi-codegen.yaml
