CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__library_dart.snap
---
source: tests/snapshot_tests.rs
expression: sorted
---
- README.md
- analysis_options.yaml
- lib/src/task_lib.dart
- lib/task-lib.dart
- pubspec.yaml
- test/task_lib_test.dart
