CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__library_go.snap
---
source: tests/snapshot_tests.rs
expression: sorted
---
- README.md
- go.mod
- internal/internal.go
- task-lib.go
- task-lib_test.go
- tests/integration_test.go
